Time: 4 ms (70.80%), Space: 39.4 MB (52.56%) - LeetHub